增加手动埋点类型

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/Info.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/Info.razor
@@ -141,6 +141,10 @@
                     linkTrackVO.Caption = $"执行ES => {linkTrackDetail.CallMethod}";
                     lstVo.Add(linkTrackVO);
                     break;
+                case EumCallType.Custom:
+                    linkTrackVO.Caption = $"手动埋点 => {linkTrackDetail.CustomLinkTrack.Message}";
+                    lstVo.Add(linkTrackVO);
+                    break;
             }
         }
     }
